# mmware

./: README.md
mmware_pi/mqttscripts/: mq_kf_bridge_mq_pub.py  mq_kf_bridge_mq_pub2.py  mqttcombined.py  mqttpublisher.py  mqttsetup  mqttsubscriber.py
mmware_pi/ros2scripts/first_pubsub/log/: latest_build
mmware_pi/ros2scripts/first_pubsub/src/py_pubsub/: setup.py
mmware_piubuntu/kafkascripts/: kafkasetup  producer.py
mmware_piubuntu/mqttscripts/: mq_kf_bridge_mq_pub.py  mq_kf_bridge_mq_pub2.py  mqttcombined.py  mqttpublisher.py  mqttsubscriber.py
mmware_piubuntu/ros2scripts/first_pubsub/install/: local_setup.sh  setup.sh
mmware_piubuntu/ros2scripts/first_pubsub/log/: latest_build
mmware_piubuntu/ros2scripts/first_pubsub/src/py_pubsub/install/: local_setup.sh  setup.sh
mmware_piubuntu/ros2scripts/first_pubsub/src/py_pubsub/log/: latest_build
mmware_server/: hosts
mmware_server/kafkascripts/: 1  confluentsetup  consumer.py  consumer_mongo.py  kafkasetup  mq_kf_bridge_kf_cons_time.py  mq_kf_bridge_kf_consumer.py  mq_kf_bridge_kf_consumer_mongo.py  mq_kf_bridge_kf_producer.py  read_mongo.py  start_mmws_kafkasample.sh
mmware_server/opencv/: ipcam.py
mmware_server/ros2scripts/first_pubsub/: start_ros2_bridge.sh
mmware_server/ros2scripts/first_pubsub/install/: local_setup.sh  setup.sh
mmware_server/ros2scripts/first_pubsub/log/: latest_build
mmware_server/ros2scripts/first_pubsub/src/py_pubsub/: package.xml  setup.py
mmware_server/ros2scripts/first_pubsub/src/py_pubsub/py_pubsub/: ros2_kafka_bridge_pub.py
(+7 files in other folders)
